# rose

./: .env.example  Cargo.toml  Dockerfile  LICENCE  README.md  lifecycle-policy.json
.github/workflows/: rust-coverage.yml  rust.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/entities/: file.rs  mod.rs  user.rs
src/handlers/: delete.rs  get.rs  head.rs  mod.rs  put.rs
src/migrator/: m20251112_140000_create_tables.rs  m20251114_174900_add_space_used_triggers.rs  m20251128_165000_create_tables.rs  mod.rs
src/storage/: client.rs  mod.rs
tests/: data.json  http-client.env.json  simple.http
