[package]
name = "rose"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bytes = "1.10.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures = "0.3.31"
mime_guess = "2.0.5"
object_store = { version = "0.12.4", features = ["aws"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "macros", "with-uuid", "with-chrono"] }
seaography = "1.1.4"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7", "serde" ] }
