[package]
name = "rose"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.11"
aws-sdk-s3 = "1.116.0"
axum = "0.8.7"
bytes = "1.11.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures = "0.3.31"
mime_guess = "2.0.5"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-async-std", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = "1.1.19"
seaography = "1.1.4"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v7", "serde" ] }
