[package]
name = "rose"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
axum = "0.8.8"
bytes = "1.11.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures = "0.3.31"
mime_guess = "2.0.5"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-async-std", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = "1.1.19"
seaography = "1.1.4"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v7", "serde" ] }
